--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Discover HarIT Tech Solution's Training and Placement Portal (TNP Portal) – a revolutionary platform for students and recruiters. Apply directly for jobs and internships, and let T&P (Training and Placement) heads efficiently manage job listings. Designed to streamline recruitment, foster transparent communication, and enhance placement processes. Powered by innovative IT solutions including AI-ML, cloud computing, and smart automation. Your one-stop destination for career opportunities and efficient placement management."
     />
+    <meta name="keywords" content="TNP Portal, Training and Placement Portal, T&P Portal, Job Portal, Internship Portal, career opportunities, placement management system, HarIT Tech Solution, job search platform, recruitment solutions, AI-ML-powered job portal, cloud computing job portal, digital transformation in placements, job application portal, student placement portal, recruiter management system" />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -16,8 +17,11 @@
     -->
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="shortc
-    ut icon" href="/favicon.ico" />
+    <link
+      rel="shortc
+    ut icon"
+      href="/favicon.ico"
+    />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <!--
@@ -32,7 +36,8 @@
     <title>TNP Portal</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Discover HarIT Tech Solution's Training and Placement Portal (TNP Portal) – a revolutionary platform for students and recruiters. Apply directly for jobs and internships, and let T&P (Training and Placement) heads efficiently manage job listings. Designed to streamline recruitment, foster transparent communication, and enhance placement processes. Powered by innovative IT solutions including AI-ML, cloud computing, and smart automation. Your one-stop destination for career opportunities and efficient placement management.
+    </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
